fixes new spacing issue

--- a/src/Map.css
+++ b/src/Map.css
@@ -1,9 +1,9 @@
 .map {
-    height: 500px;
+    height: 400px;
 }
 
 @media (min-width: 576px) {
     .map {
-        padding-right: 15px;
+        margin-right: 15px;
     }
 }
